rwd changed, some styles changed

--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,18 @@
     <div class="header-links__wrapper" id="myHeader">
       <div class="header-links container">
         <ul class="navigation-links">
-          <li><a href="./about-us.html">О нас</a></li>
-          <li><a href="./home.html#services">Услуги</a></li>
-          <li><a href="./home.html#specialists">Врачи</a></li>
-          <li><a href="./diagnostics.html">Диагностика</a></li>
-          <li><a href="./labaratory.html">Лабаратория</a></li>
-          <li><a href="./sales.html">Акции</a></li>
-          <li><a href="./feedback.html">Отзывы</a></li>
-          <li><a class="active" href="./contact.html">Контакты</a></li>
+          <li><a class="menu-link" href="./about-us.html">О нас</a></li>
+          <li><a class="menu-link" href="./home.html#services">Услуги</a></li>
+          <li><a class="menu-link" href="./home.html#specialists">Врачи</a></li>
+          <li>
+            <a class="menu-link" href="./diagnostics.html">Диагностика</a>
+          </li>
+          <li><a class="menu-link" href="./labaratory.html">Лабаратория</a></li>
+          <li><a class="menu-link" href="./sales.html">Акции</a></li>
+          <li><a class="menu-link" href="./feedback.html">Отзывы</a></li>
+          <li>
+            <a class="menu-link active" href="./contact.html">Контакты</a>
+          </li>
         </ul>
         <div class="navigation-input">
           <img src="./images/icon-search.png" alt="search icon" />
