--- a/services-inner.html
+++ b/services-inner.html
@@ -43,14 +43,16 @@
     <div class="header-links__wrapper" id="myHeader">
       <div class="header-links container">
         <ul class="navigation-links">
-          <li><a href="./about-us.html">О нас</a></li>
-          <li><a href="./home.html#services">Услуги</a></li>
-          <li><a href="./home.html#specialists">Врачи</a></li>
-          <li><a href="./diagnostics.html">Диагностика</a></li>
-          <li><a href="./labaratory.html">Лабаратория</a></li>
-          <li><a href="./sales.html">Акции</a></li>
-          <li><a href="./feedback.html">Отзывы</a></li>
-          <li><a href="./contact.html">Контакты</a></li>
+          <li><a class="menu-link" href="./about-us.html">О нас</a></li>
+          <li><a class="menu-link" href="./home.html#services">Услуги</a></li>
+          <li><a class="menu-link" href="./home.html#specialists">Врачи</a></li>
+          <li>
+            <a class="menu-link" href="./diagnostics.html">Диагностика</a>
+          </li>
+          <li><a class="menu-link" href="./labaratory.html">Лабаратория</a></li>
+          <li><a class="menu-link" href="./sales.html">Акции</a></li>
+          <li><a class="menu-link" href="./feedback.html">Отзывы</a></li>
+          <li><a class="menu-link" href="./contact.html">Контакты</a></li>
         </ul>
         <div class="navigation-input">
           <img src="./images/icon-search.png" alt="search icon" />
@@ -92,21 +94,13 @@
 
     <div class="information-box container">
       <div class="accordion-wrapper">
-
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">Биопсия ЛОР-органов</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -128,18 +122,13 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">Удаление полипов, кист, аденоидов, миндалин</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <h1 class="accordion-header__title">
+              Удаление полипов, кист, аденоидов, миндалин
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -161,18 +150,13 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">Вскрытие абсцессов, гематом, фурункулов</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <h1 class="accordion-header__title">
+              Вскрытие абсцессов, гематом, фурункулов
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -194,51 +178,13 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">Оперативное лечение ринита, гайморита, храпа</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
-            </div>
-          </div>
-          <div class="accordion-content">
-            <p>
-              Несмотря на широкий выбор методов консервативной терапии в лечении
-              ЛОР-органов, их применение не всегда приводит к устранению
-              инфекции и требует хирургического вмешательства для достижения
-              полного выздоровления. Кроме того, врожденные и приобретенные
-              искривления носовой перегородки, гипертрофии носовых раковин,
-              врожденная склонность к разрастанию лимфоидной ткани, некоторые
-              последствия травм могут быть устранены только с помощью операции.
-              Хирург-отоларинголог — врач высшей квалификационной категории,
-              который занимается хирургическим лечением патологий ЛОР-органов. В
-              компетенцию специалиста входят такие оперативные вмешательства
-              как:
-            </p>
-          </div>
-        </div>
-        
-        <div class="accordion" id="accordion">
-          <div class="accordion-header">
-            <h1 class="accordion-header__title">Хирургическая остановка острого носового кровотечения</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <h1 class="accordion-header__title">
+              Оперативное лечение ринита, гайморита, храпа
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -260,18 +206,41 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">Септопластика (операция на искривленную носовую перегородку)</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <h1 class="accordion-header__title">
+              Хирургическая остановка острого носового кровотечения
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">
+              Септопластика (операция на искривленную носовую перегородку)
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -294,17 +263,10 @@
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">Репозиция носа</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -323,7 +285,6 @@
             </p>
           </div>
         </div>
-
       </div>
     </div>
 
