--- a/diagnostics-inner.html
+++ b/diagnostics-inner.html
@@ -41,14 +41,16 @@
     <div class="header-links__wrapper" id="myHeader">
       <div class="header-links container">
         <ul class="navigation-links">
-          <li><a href="./about-us.html">О нас</a></li>
-          <li><a href="./home.html#services">Услуги</a></li>
-          <li><a href="./home.html#specialists">Врачи</a></li>
-          <li><a href="./diagnostics.html">Диагностика</a></li>
-          <li><a href="./labaratory.html">Лабаратория</a></li>
-          <li><a href="./sales.html">Акции</a></li>
-          <li><a href="./feedback.html">Отзывы</a></li>
-          <li><a href="./contact.html">Контакты</a></li>
+          <li><a class="menu-link" href="./about-us.html">О нас</a></li>
+          <li><a class="menu-link" href="./home.html#services">Услуги</a></li>
+          <li><a class="menu-link" href="./home.html#specialists">Врачи</a></li>
+          <li>
+            <a class="menu-link" href="./diagnostics.html">Диагностика</a>
+          </li>
+          <li><a class="menu-link" href="./labaratory.html">Лабаратория</a></li>
+          <li><a class="menu-link" href="./sales.html">Акции</a></li>
+          <li><a class="menu-link" href="./feedback.html">Отзывы</a></li>
+          <li><a class="menu-link" href="./contact.html">Контакты</a></li>
         </ul>
         <div class="navigation-input">
           <img src="./images/icon-search.png" alt="search icon" />
@@ -97,17 +99,10 @@
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">МРТ головного мозга</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -130,17 +125,10 @@
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">МРТ головного мозга</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
@@ -163,17 +151,10 @@
         <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">МРТ головного мозга</h1>
-            <div class="accordion-header__image">
-              <img
-                class="plus-button"
-                src="./images/diagnostics/plus-button.png"
-                alt="plus button"
-              />
-              <img
-                class="minus-button"
-                src="./images/diagnostics/minus-button.png"
-                alt="minus button"
-              />
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
             </div>
           </div>
           <div class="accordion-content">
