some styles changed

--- a/home.html
+++ b/home.html
@@ -36,14 +36,14 @@
           <a href="./cooperation.html">Работать в Viva Med</a>
         </div>
 
-        <div class="header-mobicon">
+        <div class="header-mobicon" onclick="showMenu()">
           <img src="./images/menu.png" alt="menu icon" />
         </div>
       </div>
     </div>
 
     <div class="header-links__wrapper" id="myHeader">
-      <div class="header-links container">
+      <div class="header-links  container">
         <ul class="navigation-links">
           <li><a class="menu-link" href="./about-us.html">О нас</a></li>
           <li><a class="menu-link" href="#services">Услуги</a></li>
