pages restructed to 1920 px screen

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 
       <div class="contact-map__card">
         <div class="card">
-          <h1 class="card-title"></h1>
+          <h1 class="card-title">Viva Med Clinic</h1>
           <p class="card-text">
             <svg
               width="16"
