--- a/diagnostics-inner.html
+++ b/diagnostics-inner.html
@@ -124,7 +124,7 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">МРТ головного мозга</h1>
+            <h1 class="accordion-header__title">МРТ брюшной полости</h1>
             <div class="accordion-header__icon">
               <span class="icon-plus"
                 ><span class="plus"></span><span class="minus"></span
@@ -150,7 +150,115 @@
 
         <div class="accordion" id="accordion">
           <div class="accordion-header">
-            <h1 class="accordion-header__title">МРТ головного мозга</h1>
+            <h1 class="accordion-header__title">МРТ органов малого таза</h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">МРТ позвоночника</h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">МРТ суставы руки</h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">
+              МРТ шейного отдела позвоночника
+            </h1>
+            <div class="accordion-header__icon">
+              <span class="icon-plus"
+                ><span class="plus"></span><span class="minus"></span
+              ></span>
+            </div>
+          </div>
+          <div class="accordion-content">
+            <p>
+              Несмотря на широкий выбор методов консервативной терапии в лечении
+              ЛОР-органов, их применение не всегда приводит к устранению
+              инфекции и требует хирургического вмешательства для достижения
+              полного выздоровления. Кроме того, врожденные и приобретенные
+              искривления носовой перегородки, гипертрофии носовых раковин,
+              врожденная склонность к разрастанию лимфоидной ткани, некоторые
+              последствия травм могут быть устранены только с помощью операции.
+              Хирург-отоларинголог — врач высшей квалификационной категории,
+              который занимается хирургическим лечением патологий ЛОР-органов. В
+              компетенцию специалиста входят такие оперативные вмешательства
+              как:
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion" id="accordion">
+          <div class="accordion-header">
+            <h1 class="accordion-header__title">
+              МРТ грудного отдела позвоночника
+            </h1>
             <div class="accordion-header__icon">
               <span class="icon-plus"
                 ><span class="plus"></span><span class="minus"></span
