--- a/sales.html
+++ b/sales.html
@@ -45,7 +45,9 @@
           <li><a class="menu-link" href="./about-us.html">О нас</a></li>
           <li><a class="menu-link" href="./home.html#services">Услуги</a></li>
           <li><a class="menu-link" href="./home.html#specialists">Врачи</a></li>
-          <li><a class="menu-link" href="./diagnostics.html">Диагностика</a></li>
+          <li>
+            <a class="menu-link" href="./diagnostics.html">Диагностика</a>
+          </li>
           <li><a class="menu-link" href="./labaratory.html">Лабаратория</a></li>
           <li><a class="menu-link active" href="./sales.html">Акции</a></li>
           <li><a class="menu-link" href="./feedback.html">Отзывы</a></li>
@@ -66,12 +68,12 @@
       </div>
     </div>
 
-    <h4 class="sales-page__title container">
+    <div class="sales-page__title container">
       <img src="./images/icon-home.png" alt="home icon" />
       / Акции
 
-      <h1 class="container">Акции</h1>
-    </h4>
+      <h1 class="page-title container">Акции</h1>
+    </div>
 
     <div class="sales-main__wrapper">
       <div class="sales-main container">
