--- a/services-inner.html
+++ b/services-inner.html
@@ -94,7 +94,7 @@
 
     <div class="information-box container">
       <div class="accordion-wrapper">
-        <div class="accordion" id="accordion">
+        <div class="accordion open" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">Биопсия ЛОР-органов</h1>
             <div class="accordion-header__icon">
@@ -112,6 +112,7 @@
               искривления носовой перегородки, гипертрофии носовых раковин,
               врожденная склонность к разрастанию лимфоидной ткани, некоторые
               последствия травм могут быть устранены только с помощью операции.
+              <br /><br />
               Хирург-отоларинголог — врач высшей квалификационной категории,
               который занимается хирургическим лечением патологий ЛОР-органов. В
               компетенцию специалиста входят такие оперативные вмешательства
@@ -293,9 +294,9 @@
       <div class="items-wrapper">
         <div class="item">
           <div class="item-image">
-            <img src="./images/diagnostics/MRT.png" alt="MRT" />
+            <img src="./images/services/tool1.png" alt="tool 1" />
           </div>
-          <h2 class="item-title">MPT</h2>
+          <h2 class="item-title">Otocompact Steel</h2>
           <ul class="item-facts">
             <li>Модель: AQUILION LIGHTNING SP 80</li>
             <li>Высокая точность результатов</li>
@@ -308,9 +309,9 @@
         </div>
         <div class="item">
           <div class="item-image">
-            <img src="./images/diagnostics/MSKT.png" alt="MSKT" />
+            <img src="./images/services/tool2.png" alt="tool 2" />
           </div>
-          <h2 class="item-title">MCKT</h2>
+          <h2 class="item-title">Otocompact Professional</h2>
           <ul class="item-facts">
             <li>Модель: AQUILION LIGHTNING SP 80</li>
             <li>Высокая точность результатов</li>
@@ -323,9 +324,9 @@
         </div>
         <div class="item">
           <div class="item-image">
-            <img src="./images/diagnostics/UZD.png" alt="UZD" />
+            <img src="./images/services/tool3.png" alt="tool 3" />
           </div>
-          <h2 class="item-title">УЗИ/УЗД</h2>
+          <h2 class="item-title">RadioSurg 2200</h2>
           <ul class="item-facts">
             <li>Модель: AQUILION LIGHTNING SP 80</li>
             <li>Высокая точность результатов</li>
