--- a/labaratory.html
+++ b/labaratory.html
@@ -45,8 +45,12 @@
           <li><a class="menu-link" href="./about-us.html">О нас</a></li>
           <li><a class="menu-link" href="./home.html#services">Услуги</a></li>
           <li><a class="menu-link" href="./home.html#specialists">Врачи</a></li>
-          <li><a class="menu-link" href="./diagnostics.html">Диагностика</a></li>
-          <li><a class="menu-link active" href="./labaratory.html">Лабаратория</a></li>
+          <li>
+            <a class="menu-link" href="./diagnostics.html">Диагностика</a>
+          </li>
+          <li>
+            <a class="menu-link active" href="./labaratory.html">Лабаратория</a>
+          </li>
           <li><a class="menu-link" href="./sales.html">Акции</a></li>
           <li><a class="menu-link" href="./feedback.html">Отзывы</a></li>
           <li><a class="menu-link" href="./contact.html">Контакты</a></li>
@@ -77,7 +81,7 @@
         <div class="labaratory-content__video">
           <iframe
             width="100%"
-            height="400"
+            height="360"
             src="https://www.youtube.com/embed/TRdK3KGaFko"
             title="YouTube video player"
             frameborder="0"
@@ -110,8 +114,8 @@
           <ul class="analysis-item">
             <li><a href="./labaratory-inner.html">Экспресс-тест</a></li>
             <li><a href="./labaratory-inner.html">Биохимические анализы</a></li>
-            <li><a href="./labaratory-inner.html">Липидный спектор</a></li>
             <li><a href="./labaratory-inner.html">РЕВМАТОИДНЫЕ ФАКТОРЫ</a></li>
+            <li><a href="./labaratory-inner.html">Липидный спектор </a></li>
             <li><a href="./labaratory-inner.html">КОАГУЛОЛОГИЯ</a></li>
             <li><a href="./labaratory-inner.html">ОБЩИЙ БИЛИРУБИН</a></li>
             <li><a href="./labaratory-inner.html">ОНКОМАРКЕРЫ</a></li>
