--- a/contact.html
+++ b/contact.html
@@ -589,6 +589,26 @@
       />
     </div>
 
-    <script src="./js/accardion.js"></script>
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      const header = document.getElementById("myHeader");
+      const sticky = header.offsetTop;
+
+      function myFunction() {
+        const mainWrapper = document.querySelector(".main-wrapper");
+        const contactPage = document.querySelector(".contact-page__title");
+
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+          contactPage.style.paddingTop = "65px";
+        } else {
+          header.classList.remove("sticky");
+          contactPage.style.paddingTop = "0";
+        }
+      }
+    </script>
   </body>
 </html>
