--- a/cooperation.html
+++ b/cooperation.html
@@ -232,6 +232,28 @@
       />
     </div>
 
-    <script src="./js/accardion.js"></script>
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      const header = document.getElementById("myHeader");
+      const sticky = header.offsetTop;
+
+      function myFunction() {
+        const mainWrapper = document.querySelector(".main-wrapper");
+        const cooperationPage = document.querySelector(
+          ".cooperation-page__title"
+        );
+
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+          cooperationPage.style.paddingTop = "65px";
+        } else {
+          header.classList.remove("sticky");
+          cooperationPage.style.paddingTop = "0";
+        }
+      }
+    </script>
   </body>
 </html>
