--- a/diagnostics-inner.html
+++ b/diagnostics-inner.html
@@ -449,5 +449,29 @@
     </div>
 
     <script src="./js/accardion.js"></script>
+
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      const header = document.getElementById("myHeader");
+      const sticky = header.offsetTop;
+
+      function myFunction() {
+        const mainWrapper = document.querySelector(".main-wrapper");
+        const diagnosticsPage = document.querySelector(
+          ".diagnostics-page__title"
+        );
+
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+          diagnosticsPage.style.paddingTop = "65px";
+        } else {
+          header.classList.remove("sticky");
+          diagnosticsPage.style.paddingTop = "0";
+        }
+      }
+    </script>
   </body>
 </html>
