--- a/labaratory.html
+++ b/labaratory.html
@@ -312,6 +312,28 @@
       />
     </div>
 
-    <script src="./js/accardion.js"></script>
+    <script>
+      window.onscroll = function () {
+        myFunction();
+      };
+
+      const header = document.getElementById("myHeader");
+      const sticky = header.offsetTop;
+
+      function myFunction() {
+        const mainWrapper = document.querySelector(".main-wrapper");
+        const labaratoryPage = document.querySelector(
+          ".labaratory-page__title"
+        );
+
+        if (window.pageYOffset > sticky) {
+          header.classList.add("sticky");
+          labaratoryPage.style.paddingTop = "65px";
+        } else {
+          header.classList.remove("sticky");
+          labaratoryPage.style.paddingTop = "0";
+        }
+      }
+    </script>
   </body>
 </html>
