--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="header-mobicon">
-          <img src="./images/menu.png" alt="menu icon" />
+          <img src="./images/menu.png" onclick="openMenu()" alt="menu icon" />
         </div>
       </div>
     </div>
@@ -588,6 +588,8 @@
         alt="logo background"
       />
     </div>
+
+    <script src="./js/mobileMenu.js"></script>
 
     <script>
       window.onscroll = function () {
