--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="header-mobicon">
-          <img src="./images/menu.png" alt="menu icon" />
+          <img src="./images/menu.png" onclick="openMenu()" alt="menu icon" />
         </div>
       </div>
     </div>
@@ -314,6 +314,7 @@
     </div>
 
     <script src="./js/accardion.js"></script>
+    <script src="./js/mobileMenu.js"></script>
     <script>
       window.onscroll = function () {
         myFunction();
