--- a/sales.html
+++ b/sales.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="header-mobicon">
-          <img src="./images/menu.png" alt="menu icon" />
+          <img src="./images/menu.png" onclick="openMenu()" alt="menu icon" />
         </div>
       </div>
     </div>
@@ -487,6 +487,7 @@
       />
     </div>
 
+    <script src="./js/mobileMenu.js"></script>
     <script>
       window.onscroll = function () {
         myFunction();
