--- a/cooperation.html
+++ b/cooperation.html
@@ -247,7 +247,7 @@
           ".cooperation-page__title"
         );
 
-        if (window.pageYOffset > sticky) {
+        if (window.pageYOffset > sticky && window.innerWidth > 1100) {
           header.classList.add("sticky");
           cooperationPage.style.paddingTop = "65px";
         } else {
