--- a/diagnostics.html
+++ b/diagnostics.html
@@ -293,7 +293,7 @@
           ".diagnostics-page__title"
         );
 
-        if (window.pageYOffset > sticky) {
+        if (window.pageYOffset > sticky && window.innerWidth > 1100) {
           header.classList.add("sticky");
           diagnosticsPage.style.paddingTop = "65px";
         } else {
