--- a/sales.html
+++ b/sales.html
@@ -500,7 +500,7 @@
         const mainWrapper = document.querySelector(".main-wrapper");
         const salesPage = document.querySelector(".sales-page__title");
 
-        if (window.pageYOffset > sticky) {
+        if (window.pageYOffset > sticky && window.innerWidth > 1100) {
           header.classList.add("sticky");
           salesPage.style.paddingTop = "65px";
         } else {
