--- a/services-inner.html
+++ b/services-inner.html
@@ -467,7 +467,7 @@
         const mainWrapper = document.querySelector(".main-wrapper");
         const servicesPage = document.querySelector(".servoces-page__title");
 
-        if (window.pageYOffset > sticky) {
+        if (window.pageYOffset > sticky && window.innerWidth > 1100) {
           header.classList.add("sticky");
           servicesPage.style.paddingTop = "65px";
         } else {
