bugs of mobile menu fixed

--- a/contact.html
+++ b/contact.html
@@ -462,9 +462,9 @@
             <label for="phone">Номер телефона</label>
             <input
               class="input-phone"
-              type="phone"
+              type="tel"
               id="form-phone"
-              placeholder="Пишите свой номер "
+              value="+998(  )"
             />
           </div>
           <div class="form-input form-message">
