--- a/labaratory.html
+++ b/labaratory.html
@@ -282,8 +282,8 @@
             <ul class="footer-social__links">
               <li><a href="https://www.instagram.com/">Instagram</a></li>
               <li><a href="https://telegram.org/">Telegram</a></li>
-              <li><a href="https://facebook.com/">Facebook</a></li>
-              <li><a href="https://youtube.com/">YouTube</a></li>
+              <li><a href="https://www.facebook.com/">Facebook</a></li>
+              <li><a href="https://www.youtube.com/">YouTube</a></li>
             </ul>
           </div>
         </div>
